fix(core/modal): fixing overflow on zoom

--- a/packages/core/src/components/modal-content/modal-content.scss
+++ b/packages/core/src/components/modal-content/modal-content.scss
@@ -15,4 +15,5 @@
   position: relative;
   overflow: auto;
   padding: 0.125rem 0.625rem 0.125rem 0.625rem;
+  max-content: 60vh;
 }
